create only scratch area

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   padding: 20px;
 }
 
-.payment-info {
+/* .payment-info {
   width: 247px;
   height: 91px;
   position: relative;
@@ -43,17 +43,17 @@ body {
   height: 66px;
   position: relative;
   margin: 24px auto;
-}
+} */
 
-.gameplay-container {
+/* .gameplay-container {
   width: 343px;
   height: 340px;
   background-color: #ffffff;
   position: relative;
   margin: 0 auto;
   border-radius: 12px;
-}
-
+} */
+/* 
 .engagement-title {
   width: 311px;
   height: 43px;
@@ -67,4 +67,4 @@ body {
   height: 117px;
   position: relative;
   margin: 24px auto;
-}
+} */
